--- a/RestService/pom.xml
+++ b/RestService/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.finalpro</groupId>
     <artifactId>RestService</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>payroll</name>
-    <description>payroll</description>
+    <name>RestService</name>
+    <description>RestService</description>
     <properties>
         <java.version>17</java.version>
     </properties>
